# pattern-generation-opencv

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
assets/: acircles.yaml  charuco_board.yaml  checkerboard.yaml  circles.yaml  radon_checkerboard.yaml
opencv_pattern/: gen_pattern.py  svgfig.py  test_charuco_board.py  tests_common.py
